@@ -39,9 +39,9 @@ let swap a b =
     b := buf
 
 let pre_incr  r = pre  r ( ( + ) 1 )
-let pre_decr  r = pre  r ( ( - ) 1 )
+let pre_decr  r = pre  r ( ( + ) (-1) )
 let post_incr r = post r ( ( + ) 1 )
-let post_decr r = post r ( ( - ) 1 )
+let post_decr r = post r ( ( + ) (-1) )
 
 let copy r = ref (!r)
 
