@@ -1,4 +1,5 @@
-TESTS=ref random2 random sexp2 sexp where_revised where threads nothreads openin openin_revised
+#TESTS=ref random2 random sexp2 sexp where_revised where threads nothreads openin openin_revised
+TESTS=enum ref random2 random sexp2 where_revised where threads nothreads openin openin_revised
 BYTE_TARGETS=  $(patsubst %, test_%.byte, $(TESTS))
 NATIVE_TARGETS=$(patsubst %, test_%.native, $(TESTS))
 COMPILE= $(BYTE_TARGETS) $(NATIVE_TARGETS)
