@@ -6,5 +6,7 @@ type t = A | B with sexp
 
 type u = t Data.Persistent.List.t with sexp
 
-Languages.SExpr.output_hum System.IO.stdout (sexp_of_u [A;B;A])
+let (stdout:'a System.IO.output) = stdout;;
+
+Languages.SExpr.output_hum stdout (sexp_of_u [A;B;A])
 
